Slick and regular spacing product fix

--- a/scss/components/_front.scss
+++ b/scss/components/_front.scss
@@ -17,6 +17,9 @@
 		.product-fields {
 			background-color: $white;
 		}
+		.product {
+			margin-bottom: 0;
+		}
 	}
 	.slick__arrow {
 		position: relative;
